# MolmoBot

./: .gitignore  README.md
MolmoBot/: .gitignore  README.md  demo_policy.ipynb  pyproject.toml
MolmoBot-Pi0/: .gitignore  README.md  pyproject.toml
MolmoBot-Pi0/config/eval/: eval.yaml
MolmoBot-Pi0/config/eval/policy/: empty.yaml  paligemma.yaml  pi.yaml
MolmoBot-Pi0/config/eval/policy/cameras/: real.yaml  sim_exo_random.yaml  sim_exo_shoulder.yaml
MolmoBot-Pi0/molmobot_pi0/: config_openpi.py  dataset.py  dataset_openpi.py  explore_data.py  prompt_templates.py  train_openpi_pytorch.py  utils.py
MolmoBot-Pi0/molmobot_pi0/eval/: eval.py  utils.py
MolmoBot-Pi0/molmobot_pi0/eval/policies/: pi.py  stateful.py  websocket.py
MolmoBot-Pi0/molmobot_pi0/eval/real/: serve.py  utils.py
MolmoBot-Pi0/scripts/: convert_jax_model_to_pytorch.py  install_openpi_extras.py
MolmoBot-SPOC/: README.md  __init__.py  pyproject.toml
MolmoBot-SPOC/architecture/: __init__.py  spoc_model.py
MolmoBot-SPOC/architecture/action_spaces/: abstract.py  binned_continuous.py  quantile_based_binned_continuous.py
MolmoBot-SPOC/architecture/common/: action_decoder.py  goal_cond_llama.py  goal_cond_visual_encoder.py  image_encoder.py  preprocessors.py  text_encoder.py  utils.py
MolmoBot-SPOC/architecture/config/: model_config.py  preproc_config.py
MolmoBot-SPOC/eval/: spoc_policy.py  spoc_server.py
MolmoBot-SPOC/eval/config/: franka_eval_config.py  rby1_eval_config.py  spoc_policy_configs.py
MolmoBot-SPOC/training/: dataset.py  train_spoc_pl.py
MolmoBot-SPOC/training/config/: fr3_spoc_training_config.py  rby1_spoc_training_config.py  spoc_training_config.py
MolmoBot-SPOC/utils/: config_registry.py  dataset_utils.py  image_warping_utils.py  logger_utils.py  qformer_attention_viz.py  sampler_utils.py  string_utils.py  train_utils.py  transformation_util.py
MolmoBot-SPOC/utils/constants/: camera_constants.py  prompt_templates.py  sensor_constants.py
MolmoBot/launch_scripts/: convert_to_unsharded.py  run_eval.py  serve_molmo.py  serve_molmobot_rby1_door.py  serve_molmobot_rby1_multitask.py  train_molmobot.py
MolmoBot/olmo/: train_init_utils.py
MolmoBot/olmo/eval/: configure_molmo_spaces.py  configure_real_robot.py  loss_evaluator.py  real_robot_molmobot_rby1_door.py  real_robot_molmobot_rby1_multitask.py  websocket_server.py
MolmoBot/olmo/models/molmobot/: inference_wrapper.py
MolmoBot/olmo/train/: checkpointer.py  distributed_checkpointing.py  optim.py  run_trainer.py  timer.py  trainer.py  trainer_config.py
robot_eval/config/: droid.yaml
robot_eval/scripts/droid/: README.md  run_policy.py
